src/objects/Properties__c.object
<CustomObject>
    <description>Property data table with the development, property, and unit information.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_to_Deliver_Application_and_Docs__c</fullName>
        <inlineHelpText>Address to Which Application and Supporting Documents Should Be Delivered (if not uploading on this system)</inlineHelpText>
        <label>Address to Deliver Application Documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Deadline_Date_at_5_00pm__c</fullName>
        <inlineHelpText>Deadline time is by 5:00pm of this date.</inlineHelpText>
        <label>Application Deadline Date (at 5:00pm)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Unit__c</fullName>
        <label>Apt./Unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft_Range_if_property_level__c</fullName>
        <label>Area (Sq. Ft.) Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft__c</fullName>
        <label>Area (Sq. Ft.)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Max_Rent__c</fullName>
        <label>BMR 1 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Max__c</fullName>
        <label>BMR 1 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Min_Rent__c</fullName>
        <label>BMR 1 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Min__c</fullName>
        <label>BMR 1 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Plus_Bed_Max_Rent__c</fullName>
        <label>BMR 1+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Plus_Bed_Max__c</fullName>
        <label>BMR 1+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Plus_Bed_Min_Rent__c</fullName>
        <label>BMR 1+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Plus_Bed_Min__c</fullName>
        <label>BMR 1+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Max_Rent__c</fullName>
        <label>BMR 2 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Max__c</fullName>
        <label>BMR 2 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Min_Rent__c</fullName>
        <label>BMR 2 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Min__c</fullName>
        <label>BMR 2 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Plus_Bed_Max_Rent__c</fullName>
        <label>BMR 2+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Plus_Bed_Max__c</fullName>
        <label>BMR 2+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Plus_Bed_Min_Rent__c</fullName>
        <label>BMR 2+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Plus_Bed_Min__c</fullName>
        <label>BMR 2+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Max_Rent__c</fullName>
        <label>BMR 3 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Max__c</fullName>
        <label>BMR 3 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Min_Rent__c</fullName>
        <label>BMR 3 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Min__c</fullName>
        <label>BMR 3 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Plus_Bed_Max_Rent__c</fullName>
        <label>BMR 3+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Plus_Bed_Max__c</fullName>
        <label>BMR 3+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Plus_Bed_Min_Rent__c</fullName>
        <label>BMR 3+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Plus_Bed_Min__c</fullName>
        <label>BMR 3+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Commission_Information__c</fullName>
        <formula>IF (  ISPICKVAL(Commissions_to_BMR_Buyer_Realtor__c , &quot;Yes&quot;) , &quot;Realtor commission is based on 2.5% of the sales price. Broker must accompany prospective purchaser on the prospects first visit to the property.  Registration will occur at that time by filling out a registration card.&quot; , &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR Commission Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Max_Rent__c</fullName>
        <label>BMR Jr 1 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Max__c</fullName>
        <label>BMR Jr 1 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Min_Rent__c</fullName>
        <label>BMR Jr 1 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Min__c</fullName>
        <label>BMR Jr 1 Bed Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Max_Rent__c</fullName>
        <label>BMR Other Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Max__c</fullName>
        <label>BMR Other Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Min_Rent__c</fullName>
        <label>BMR Other Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Min__c</fullName>
        <label>BMR Other Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Max_Rent__c</fullName>
        <label>BMR SRO - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Max__c</fullName>
        <label>BMR SRO - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Min_Rent__c</fullName>
        <label>BMR SRO - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Min__c</fullName>
        <label>BMR SRO - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Bed_Max_Rent__c</fullName>
        <label>BMR Studio Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Max__c</fullName>
        <label>BMR Studio - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Min_Rent__c</fullName>
        <label>BMR Studio - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Min__c</fullName>
        <label>BMR Studio - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Unit_Appliances_Description__c</fullName>
        <description>List all BMR Unit Appliances (Make / Model / Color)</description>
        <inlineHelpText>List all BMR Unit Appliances (Make / Model / Color)</inlineHelpText>
        <label>BMR Unit Appliances Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMR_Unit_Finishings_and_Type__c</fullName>
        <inlineHelpText>Under finishings and type, include flooring, cabinets, carpet, etc.</inlineHelpText>
        <label>BMR Unit Finishings and Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Issue_Date__c</fullName>
        <label>Building Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Selection_Criteria__c</fullName>
        <inlineHelpText>Building Selection Criteria should include information about:

Ability to pay rent standard
Credit Standard
Rental History Standard
Criminal History Standard
Maximum Household Size Standard
Other</inlineHelpText>
        <label>Building Selection Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City_2nd_Special_Remark__c</fullName>
        <defaultValue>&quot;City holds the right of first refusal of this property.&quot;
&amp; BR() &amp; BR() &amp;
&quot;City 2nd Loans are available to qualified buyers - for program information please visit: http://sf-moh.org/index.aspx?page=747&quot;</defaultValue>
        <label>City 2nd Special Remark</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissions_to_BMR_Buyer_Realtor__c</fullName>
        <description>Will you be providing commission for realtors representing your BMR buyers?</description>
        <inlineHelpText>Will you be providing commission for realtors representing your BMR buyers?</inlineHelpText>
        <label>Commissions to BMR Buyer Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condo_Mapped_by_Dept_of_Real_Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the condo mapped (i.e., subdivided) through Dept. of Real Estate?</description>
        <inlineHelpText>Is the condo mapped (i.e., subdivided) through Dept. of Real Estate?</inlineHelpText>
        <label>Condo Mapped by Dept. of Real Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <label>Contact Person Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Developer_Company_Name__c</fullName>
        <label>Developer Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_Address__c</fullName>
        <label>Developer Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_Email__c</fullName>
        <label>Developer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_Name__c</fullName>
        <label>Developer Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_Phone__c</fullName>
        <label>Developer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Address__c</fullName>
        <label>Development Escrow Officer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Email__c</fullName>
        <label>Development Escrow Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Name__c</fullName>
        <label>Development Escrow Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Phone__c</fullName>
        <label>Development Escrow Officer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Development_Name__c</fullName>
        <label>Development Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Title_Company__c</fullName>
        <label>Development Title Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Date_BMR_Units_Can_be_Occupied__c</fullName>
        <description>Expected Date BMR Units Can Be Occupied by BMR Buyers</description>
        <inlineHelpText>Expected Date BMR Units Can Be Occupied by BMR Buyers</inlineHelpText>
        <label>Expected Date BMR Units Can be Occupied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_COO_Actual_Issue_Date__c</fullName>
        <description>Final Certificate of Occupancy Actual Issue Date</description>
        <inlineHelpText>Final Certificate of Occupancy Actual Issue Date</inlineHelpText>
        <label>Final COO Actual Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_COO_Expected_Issue_Date__c</fullName>
        <label>Final COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Monthly_HOA_Amount_With_Parking__c</fullName>
        <label>Final Monthly HOA Amount With Parking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Monthly_HOA_Amount_Without_Parking__c</fullName>
        <label>Final Monthly HOA Amount Without Parking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_Utilities_are_Paid_by_the_Renter__c</fullName>
        <inlineHelpText>Describe what utilities are paid by the bulding, what utilities are paid by the renter, and if a third party vendor is used, what the renter is charged on a monthly basis (list utilities covered by third party vendor)</inlineHelpText>
        <label>How Utilities are Paid by the Renter?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Level_of_Applicants__c</fullName>
        <defaultValue>&quot;% of Area Median Income&quot;&amp; BR() &amp; BR() &amp;

&quot;1 Person - $81,550&quot; &amp;BR() &amp;
&quot;2 Persons - $93,250&quot; &amp;BR() &amp;
&quot;3 Persons - $104,900&quot; &amp;BR() &amp;
&quot;4 Persons - $116,500&quot; &amp;BR()</defaultValue>
        <label>Income Level of Applicants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Session_Date_Time__c</fullName>
        <label>Information Session Date/Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intend_to_Convert_to_Ownership_Details__c</fullName>
        <label>Intend to Convert to Ownership - Details</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intend_to_Convert_to_Ownership_Units__c</fullName>
        <description>Do you intend to convert to ownership units in the future?</description>
        <inlineHelpText>Do you intend to convert to ownership units in the future?</inlineHelpText>
        <label>Intend to Convert to Ownership Units?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_building_Fannie_Mae_approved__c</fullName>
        <label>Is the building Fannie Mae approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_w_Buyer_s_Lending_Ability_Reason__c</fullName>
        <description>Please explain the situation(s) about your building that can impact buyer&apos;s ability to secure loans.</description>
        <inlineHelpText>Please explain the situation(s) about your building that can impact buyer&apos;s ability to secure loans.</inlineHelpText>
        <label>Issues w/ Buyer&apos;s Lending Ability Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_with_Buyer_s_Ability_to_Get_Loans__c</fullName>
        <description>Is there anything MOHCD should know about your building in terms of buyer’s ability to secure loans (e.g. too many renters for FNMA approval; a pending lawsuit, etc.)?</description>
        <inlineHelpText>Is there anything MOHCD should know about your building in terms of buyer’s ability to secure loans (e.g. too many renters for FNMA approval; a pending lawsuit, etc.)?</inlineHelpText>
        <label>Issues with Buyer&apos;s Ability to Get Loans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lenders_aren_t_MOHCD_BMR_Approved_reason__c</fullName>
        <description>Please explain why your lenders are not approved by MOHCD as a BMR lender.</description>
        <inlineHelpText>Please explain why your lenders are not approved by MOHCD as a BMR lender.</inlineHelpText>
        <label>Lenders aren&apos;t MOHCD BMR-Approved reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_All_Sources_of_Government_Financing__c</fullName>
        <label>List All Sources of Government Financing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Date_Time__c</fullName>
        <label>Lottery Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_Information__c</fullName>
        <label>Lottery Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lottery_Location__c</fullName>
        <label>Lottery Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lowest_Monthly_Price_Market_Rate_Renter__c</fullName>
        <description>If Leased Separately, Lowest Monthly Price for Market Rate Renter</description>
        <inlineHelpText>If Leased Separately, Lowest Monthly Price for Market Rate Renter</inlineHelpText>
        <label>Lowest Monthly Price -Market Rate RENTER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lowest_Price_Lease_Market_Rate_Owner__c</fullName>
        <description>If Sold/Leased Separately, Lowest Price/Lease for Space</description>
        <inlineHelpText>If Sold/Leased Separately, Lowest Price/Lease for space for market rate owners</inlineHelpText>
        <label>Lowest Price/Lease - Market Rate OWNER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MLS_Listing_Link__c</fullName>
        <label>MLS Listing Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MLS__c</fullName>
        <label>MLS #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Commission_Arrangement_Rules__c</fullName>
        <description>If yes, please explain the arrangement, including commission percentage and rules for registering as a realtor for a Market Rate buyer</description>
        <inlineHelpText>If yes, please explain the arrangement, including commission percentage and rules for registering as a realtor for a Market Rate buyer</inlineHelpText>
        <label>MR Commission Arrangement (% &amp; Rules)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 1 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 1 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 1 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 1 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 1+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 1+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 1+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 1+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 2 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 2 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 2 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 2 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 2+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 2+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 2+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 2+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 3 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 3 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 3 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 3 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 3+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 3+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 3+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 3+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Max_Price__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Min_Price__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Max_Price__c</fullName>
        <label>Market Rate Other Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate Other Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Min_Price__c</fullName>
        <label>Market Rate Other Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate Other Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Max_Price__c</fullName>
        <label>Market Rate SRO - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Max_Rent__c</fullName>
        <label>Market Rate SRO - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Min_Price__c</fullName>
        <label>Market Rate SRO - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Min_Rent__c</fullName>
        <label>Market Rate SRO - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Max_Price__c</fullName>
        <label>Market Rate Studio - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Max_Rent__c</fullName>
        <label>Market Rate Studio - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Min_Price__c</fullName>
        <label>Market Rate Studio - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Min_Rent__c</fullName>
        <label>Market Rate Studio - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Unit_Appliances_Description__c</fullName>
        <description>List all Market Rate Unit Appliances (Make / Model / Color)</description>
        <inlineHelpText>List all Market Rate Unit Appliances (Make / Model / Color)</inlineHelpText>
        <label>Market Rate Unit Appliances Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Unit_Finishings_and_Type__c</fullName>
        <description>List all Market Rate Unit Finishing and Type.</description>
        <inlineHelpText>Under finishings and type, include flooring, cabinets, carpet, etc.</inlineHelpText>
        <label>Market Rate Unit Finishings and Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>